updated final cleaned file

--- a/Final Data Cleaning & Analysis.ipynb
+++ b/Final Data Cleaning & Analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12713e4b",
+   "id": "d2929904",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.654229Z",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80547776",
+   "id": "c8376c49",
    "metadata": {},
    "source": [
     "# Complete EDA of *train* excel sheet"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8f36aaa0",
+   "id": "71cae48c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.856395Z",
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce7c4ae7",
+   "id": "375c3126",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.871322Z",
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ce999e06",
+   "id": "0f2f53ff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:10:02.774286Z",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "de9deb9d",
+   "id": "133aec24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.887280Z",
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad56f061",
+   "id": "9ee54199",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.903247Z",
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d2af5b90",
+   "id": "d8824e98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.934186Z",
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "368b9444",
+   "id": "664a0aa7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:14.950112Z",
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6913edbc",
+   "id": "c4f1c162",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.013976Z",
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a2c2b2c4",
+   "id": "6093e037",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.044857Z",
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fe348b4f",
+   "id": "0ece916a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.059817Z",
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ac9ac9a2",
+   "id": "b932114a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.074778Z",
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "469f68c8",
+   "id": "e135fefe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.089738Z",
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e198093f",
+   "id": "faad57dc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.119658Z",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e9626833",
+   "id": "9db40b99",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.198481Z",
@@ -1411,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b02a539d",
+   "id": "6b86809a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.213407Z",
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f76609d",
+   "id": "bc831025",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.229365Z",
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3c11480a",
+   "id": "6786d5a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.260281Z",
@@ -1811,7 +1811,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f0d9aaf3",
+   "id": "83a7baef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.275242Z",
@@ -1837,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f6a47e02",
+   "id": "3e9d0097",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.291199Z",
@@ -1863,7 +1863,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1352c192",
+   "id": "aaac2a42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.307156Z",
@@ -1938,7 +1938,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6bfb4f61",
+   "id": "0af81244",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.323123Z",
@@ -1974,7 +1974,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "66c67f4f",
+   "id": "d5af74af",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.339071Z",
@@ -1991,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6955db77",
+   "id": "4ddded6e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.355028Z",
@@ -2024,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "af65bc81",
+   "id": "d5f38c73",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.416862Z",
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "879b581a",
+   "id": "920e5075",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.432821Z",
@@ -2169,7 +2169,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a032bf8e",
+   "id": "c32b515e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.448777Z",
@@ -2195,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c8b07c23",
+   "id": "416a4289",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.463739Z",
@@ -2285,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a85868d2",
+   "id": "b29c1238",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.479694Z",
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "ef4e7c70",
+   "id": "11f8b18e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:23:00.735397Z",
@@ -2439,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "54d100b4",
+   "id": "01daf168",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.510613Z",
@@ -2465,7 +2465,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "31b22087",
+   "id": "5a978503",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.526599Z",
@@ -2556,7 +2556,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c73c69cd",
+   "id": "613d96b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.542527Z",
@@ -2582,7 +2582,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5093496b",
+   "id": "97a97985",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.558485Z",
@@ -2704,7 +2704,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a4c0a252",
+   "id": "4475da03",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.574442Z",
@@ -2730,7 +2730,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b36dc0f1",
+   "id": "779a5d2f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.590398Z",
@@ -2821,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "74a63e31",
+   "id": "07682235",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:02:15.606356Z",
@@ -2847,7 +2847,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "74985b70",
+   "id": "c4fab22c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:04:27.911766Z",
@@ -2885,7 +2885,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ec3db618",
+   "id": "5cf011c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:11:52.758688Z",
@@ -2924,7 +2924,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b0a0f5",
+   "id": "8097bd78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2934,7 +2934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8064ecd",
+   "id": "48f3624b",
    "metadata": {},
    "source": [
     "# EDA of *test* excel sheet"
@@ -2943,7 +2943,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "729b80e5",
+   "id": "5e34fbeb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:18:48.926392Z",
@@ -3298,7 +3298,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "724a6b6f",
+   "id": "eb29ec1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:23:21.042246Z",
@@ -3506,7 +3506,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ce609d00",
+   "id": "bbc24b56",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:20:21.151687Z",
@@ -3752,12 +3752,13 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "46f2827d",
+   "id": "dbaf584f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-02-11T14:24:44.011067Z",
      "start_time": "2022-02-11T14:24:43.986832Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -3956,6 +3957,19 @@
    "source": [
     "x_test.drop(columns=['Temperature', 'Precipitable Water'], axis=1, inplace=True)\n",
     "x_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e7ae93c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = np.array(x_train)\n",
+    "y_train = np.array(y_train)\n",
+    "x_val = np.array(x_val)\n",
+    "y_val = np.array(y_val)"
    ]
   }
  ],
